--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.0.10",
     "@supabase/supabase-js": "^2.26.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
