--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.0.10",
     "@supabase/supabase-js": "^2.26.0",
+    "dayjs": "^1.11.9",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.14.2",
     "sort-by": "^1.2.0"
