update payments Method

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-currency-input-field": "^3.6.11",
     "react-dom": "^18.2.0",
     "react-input-mask": "^2.0.4",
     "react-pro-sidebar": "^1.1.0-alpha.1",
