--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-currency-input-field": "^3.6.11",
     "react-dom": "^18.2.0",
+    "react-drag-drop-files": "^2.3.10",
     "react-i18next": "^13.3.1",
     "react-input-mask": "^2.0.4",
     "react-pro-sidebar": "^1.1.0-alpha.1",
